--- a/starter_project/src/client/views/index.html
+++ b/starter_project/src/client/views/index.html
@@ -18,15 +18,16 @@
 
         <main>
             <section>
-                <form id="urlForm">
+                <form id="urlForm" action="">
                     <input id="name" type="text" name="url" placeholder="Enter URL" required>
                     <button id="submitButton" type="submit">Submit</button>
                 </form>
-                
+
             </section>
 
             <section>
                 <strong>Form Results:</strong>
+                <br/>
                 <div id="results"></div>
             </section>
         </main>
